--- a/src/components/action-buttons/styles.css
+++ b/src/components/action-buttons/styles.css
@@ -13,7 +13,7 @@
 
 .status-dropdown-container {
 	background: white;
-	border: 0.5px solid lightgray;
+	border: 1px solid lightgray;
 	border-radius: 3px;
 	font-size: 14px;
 	width: 120px;
