--- a/src/components/card-list/styles.css
+++ b/src/components/card-list/styles.css
@@ -19,7 +19,7 @@
 }
 
 .card-preview {
-	border: 0.5px solid lightgray;
+	border: 1px solid lightgray;
 	border-radius: 3px;
 	color: black;
 	font-size: 14px;
