--- a/src/components/divider/styles.css
+++ b/src/components/divider/styles.css
@@ -1,5 +1,5 @@
 .divider {
 	margin: 8px 0;
 	width: 100%;
-	border: 0.5px solid lightgray;
+	border: 1px solid lightgray;
 }
